# gnn_flow

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_data_validation.ipynb  01_model_validation.ipynb
notebooks/lightning_logs/version_2/checkpoints/: epoch=4-step=35.ckpt
notebooks/lightning_logs/version_4/: metrics.csv
notebooks/lightning_logs/version_4/checkpoints/: epoch=4-step=35.ckpt
notebooks/lightning_logs/version_5/: metrics.csv
notebooks/lightning_logs/version_5/checkpoints/: epoch=9-step=70.ckpt
notebooks/lightning_logs/version_6/: metrics.csv
notebooks/lightning_logs/version_6/checkpoints/: epoch=9-step=70.ckpt
notebooks/lightning_logs/version_7/: metrics.csv
notebooks/lightning_logs/version_7/checkpoints/: epoch=9-step=70.ckpt
notebooks/lightning_logs/version_8/: metrics.csv
notebooks/lightning_logs/version_8/checkpoints/: epoch=9-step=14070.ckpt
research_questions/: hypotheses.md  research_plan.md
research_questions/daily_logs/: 251021.md  251022.md  251023.md  template.md
scripts/: run_ablation.py
src/cnn_bence/core/: train.py
src/cnn_bence/data/: data_module.py
src/cnn_bence/data_prep/: data_module.py
src/cnn_bence/models/: densenet.py  resnet.py
src/cnn_bence/trainModule/: ResNetModule.py
src/cnn_bence/trainer/: CIFARLitModule.py  DenseNetModule.py
src/cnn_bence/utils/: paths.py  seed.py
