[project]
name="dl_project1"
version="0.1.0"
description="Research project for ResNet"
requires-python=">=3.10"

dependencies=[
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0"
]

[project.optional-dependencies]
dev=[
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0"
]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend="setuptools.build_meta"

[tool.black]
line-length=88
target-version=["py310"]

[tool.setuptools.packages.find]
where=["src"]
include=["GNN_flow"]


